Added PUT /documents/{documentId}/restore with artifactId (#483)